refactor(config): 优化实体列表配置项的初始化方式
- 修改 GUIDANCE_ENTITY_LIST 的类型定义为 List<String>
- 使用 ArrayList 包装默认实体列表，避免不可变集合问题
- 改进配置项的默认值初始化，提高灵活性和安全性